# m2-semantic-engine

./: README.md  pyproject.toml  requirements.txt
ci/github/workflows/: lint-test.yml
configs/: default.yaml
docker/: Dockerfile
docs/: architecture.md
scripts/: download_models.py  ingest_data.py
src/semantic_engine/: __init__.py  settings.py
src/semantic_engine/api/: main.py  routers.py
src/semantic_engine/embeddings/: generator.py
src/semantic_engine/indexing/: faiss_indexer.py  weaviate_client.py
src/semantic_engine/ingestion/: kafka_consumer.py
src/semantic_engine/reasoning/: rag_pipeline.py
src/semantic_engine/retrieval/: retriever.py
src/semantic_engine/utils/: logger.py  metrics.py
tests/unit/: test_retriever.py
